syntax = "proto3";

package com.ytking.proto.greeter;

option java_package = "com.ytking.proto.greeter";
option java_multiple_files = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}